resources/ingress/cluster-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cluster-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: le-clusterissuer
spec:
  rules:
  - host: grafana.crystalbasilica.co.uk
    http:
      paths:
      - backend:
          serviceName: prom-grafana
          servicePort: 80
  - host: argocd.crystalbasilica.co.uk
    http:
      paths:
      - backend:
          serviceName: argo-argocd-server
          servicePort: 80
  tls:
    - hosts:
      - grafana.crystalbasilica.co.uk
      - argocd.crystalbasilica.co.uk
      secretName: cluster-ingress-tls
